[package]
name = "xingtian"
version = "0.1.0"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "System info"
homepage = "https://github.com/BlinkList/xingtian"
repository = "https://github.com/BlinkList/xingtian"
documentation = "https://docs.rs/xingtian"
license = "GPL-3.0"
edition = "2021"
readme = "README.md"
rust-version = "1.62.0"
publish = false

[dependencies]
dns-lookup = "2.0.2"
kmod = "0.5.0"
log = "0.4.20"
nc = "0.8.17"
thiserror = "1.0.47"
